// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots infinite-list/List basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1 MuiGrid-spacing-xs-24-25"
    >
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
      >
        <div
          className="MuiPaper-root-98 MuiPaper-elevation2-102 MuiPaper-rounded-99"
        >
          <div
            className="MuiList-root-125 MuiList-padding-126"
          >
            <div
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List"
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots infinite-list/Table basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-129 MuiGrid-spacing-xs-24-153"
    >
      <div
        className="MuiGrid-item-130 MuiGrid-grid-xs-12-169"
      >
        <div
          className="MuiPaper-root-226 MuiPaper-elevation2-230 MuiPaper-rounded-227"
        >
          <div
            className="MuiTable-root-253"
          >
            <div
              className="MuiTableHead-root-255 Component-root-254"
            >
              <div
                className="MuiTableRow-root-261 Component-root-256 MuiTableRow-head-264 Component-head-259"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-278 InnerTableCell-root-266 MuiTableCell-head-279 InnerTableCell-head-267"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-278 InnerTableCell-root-266 MuiTableCell-head-279 InnerTableCell-head-267"
                  scope="col"
                >
                  Title
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-278 InnerTableCell-root-266 MuiTableCell-head-279 InnerTableCell-head-267"
                  scope="col"
                >
                  Timestamp
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List InnerTableBody-root-290"
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots infinite-list/Table order 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-291 MuiGrid-spacing-xs-24-315"
    >
      <div
        className="MuiGrid-item-292 MuiGrid-grid-xs-12-331"
      >
        <div
          className="MuiPaper-root-388 MuiPaper-elevation2-392 MuiPaper-rounded-389"
        >
          <div
            className="MuiTable-root-415"
          >
            <div
              className="MuiTableHead-root-417 Component-root-416"
            >
              <div
                className="MuiTableRow-root-423 Component-root-418 MuiTableRow-head-426 Component-head-421"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-440 InnerTableCell-root-428 MuiTableCell-head-441 InnerTableCell-head-429"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-440 InnerTableCell-root-428 MuiTableCell-head-441 InnerTableCell-head-429"
                  scope="col"
                >
                  <span
                    aria-describedby={null}
                    className="MuiButtonBase-root-465 MuiTableSortLabel-root-460"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                    title="Title"
                  >
                    Title
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-468 MuiTableSortLabel-icon-462 MuiTableSortLabel-iconDirectionAsc-464"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-440 InnerTableCell-root-428 MuiTableCell-head-441 InnerTableCell-head-429"
                  scope="col"
                >
                  <span
                    aria-describedby={null}
                    className="MuiButtonBase-root-465 MuiTableSortLabel-root-460"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                    title="Timestamp"
                  >
                    Timestamp
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-468 MuiTableSortLabel-icon-462 MuiTableSortLabel-iconDirectionAsc-464"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <span
            className="MuiTypography-root-477 MuiTypography-caption-487"
            style={
              Object {
                "margin": 10,
              }
            }
          >
            - tip: use [shift + click] to sort by multiple fields
          </span>
          <p
            className="MuiTypography-root-477 MuiTypography-body2-485 MuiTypography-gutterBottom-504"
            style={
              Object {
                "margin": 10,
              }
            }
          >
            Result: 
            []
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots infinite-list/Table search 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-513 MuiGrid-spacing-xs-24-537"
    >
      <div
        className="MuiGrid-item-514 MuiGrid-grid-xs-12-553"
      >
        <div
          className="MuiPaper-root-610 MuiPaper-elevation2-614 MuiPaper-rounded-611"
        >
          <div
            className="MuiTable-root-637"
          >
            <div
              className="MuiTableHead-root-639 Component-root-638"
            >
              <div
                className="MuiTableRow-root-645 Component-root-640 MuiTableRow-head-648 Component-head-643"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-662 InnerTableCell-root-650 MuiTableCell-head-663 InnerTableCell-head-651"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-662 InnerTableCell-root-650 MuiTableCell-head-663 InnerTableCell-head-651"
                  scope="col"
                >
                  Title
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-662 InnerTableCell-root-650 MuiTableCell-head-663 InnerTableCell-head-651"
                  scope="col"
                >
                  Timestamp
                </div>
              </div>
              <div
                className="MuiTableRow-root-645 Component-root-640 MuiTableRow-head-648 Component-head-643"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-662 InnerTableCell-root-650 MuiTableCell-head-663 InnerTableCell-head-651"
                  scope="col"
                />
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-662 InnerTableCell-root-650 MuiTableCell-head-663 InnerTableCell-head-651"
                  scope="col"
                >
                  <div
                    className="MuiInputBase-root-687 MuiInput-root-674 MuiInput-underline-678 MuiInputBase-fullWidth-696 MuiInput-fullWidth-681"
                    onClick={[Function]}
                  >
                    <input
                      className="MuiInputBase-input-697 MuiInput-input-682"
                      name="name"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-662 InnerTableCell-root-650 MuiTableCell-head-663 InnerTableCell-head-651"
                  scope="col"
                >
                  <div
                    className="MuiInputBase-root-687 MuiInput-root-674 MuiInput-underline-678 MuiInputBase-fullWidth-696 MuiInput-fullWidth-681"
                    onClick={[Function]}
                  >
                    <input
                      className="MuiInputBase-input-697 MuiInput-input-682"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <p
            className="MuiTypography-root-704 MuiTypography-body2-712 MuiTypography-gutterBottom-731"
            style={
              Object {
                "margin": 10,
              }
            }
          >
            Result: 
            []
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
